--- a/QLNS/QLNS.csproj
+++ b/QLNS/QLNS.csproj
@@ -69,13 +69,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="WINDOWS\BANSACH_WINDOW.xaml.cs">
+    <Compile Include="MAIN_WINDOW.xaml.cs">
+      <DependentUpon>MAIN_WINDOW.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\BANSACH_WINDOW.xaml.cs">
       <DependentUpon>BANSACH_WINDOW.xaml</DependentUpon>
     </Compile>
-    <Compile Include="WINDOWS\KHACHHANG_WINDOW.xaml.cs">
+    <Compile Include="View\KHACHHANG_WINDOW.xaml.cs">
       <DependentUpon>KHACHHANG_WINDOW.xaml</DependentUpon>
     </Compile>
-    <Compile Include="WINDOWS\SACH_WINDOW.xaml.cs">
+    <Compile Include="View\SACH_WINDOW.xaml.cs">
       <DependentUpon>SACH_WINDOW.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
@@ -90,15 +93,19 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="WINDOWS\BANSACH_WINDOW.xaml">
+    <Page Include="MAIN_WINDOW.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="WINDOWS\KHACHHANG_WINDOW.xaml">
+    <Page Include="View\BANSACH_WINDOW.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="WINDOWS\SACH_WINDOW.xaml">
+    <Page Include="View\KHACHHANG_WINDOW.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\SACH_WINDOW.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -129,6 +136,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\" />
+    <Folder Include="ViewModel\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
